# rcore

./: .gitignore  .gitmodules  README.md
easy-fs/src/: bitmap.rs  block_cache.rs  efs.rs  layout.rs  lib.rs  vfs.rs
rcore-os/: Cargo.toml  build.rs  justfile
rcore-os/src/: batch.rs  config.rs  console.rs  lang_items.rs  linker.ld  loader.rs  main.rs  sbi.rs  timer.rs  upsync.rs  utils.rs
rcore-os/src/mem/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
rcore-os/src/syscall/: fs.rs  mod.rs  process.rs  time.rs
rcore-os/src/task/: context.rs  manager.rs  mod.rs  pid.rs  processor.rs  stack.rs  switch.asm  switch.rs
rcore-os/src/trap/: context.rs  mod.rs  trap.asm
user/: Cargo.toml  build.py  build.rs
user/.cargo/: config
user/src/: console.rs  fs.rs  lang_items.rs  lib.rs  linker.ld  process.rs  syscall.rs  time.rs
