[package]
name = "rcore-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = "0.10.1"
sbi-rt = { vesion = "0.0.2", features = ["legacy"] }
buddy_system_allocator = "0.9.0"
bitflags = "2.4.1"
xmas-elf = "0.9.1"

[features]
default = ["log", "error"]
log = []
error = []
warn = ["error"]
debug = ["warn"]
